# taktis

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py
docker/: .dockerignore  Dockerfile
docs/vault/: Architecture Overview.md  Crash Recovery.md  Glossary.md  Home.md  Recipes.md
scripts/: setup-linux.sh  setup-macos.sh  setup-windows.bat
taktis/: config.py  db.py  exceptions.py  models.py  repository.py  utils.py
taktis/agent_templates/: deep-interview.md  plan-checker.md  researcher.md  roadmapper-revision.md  roadmapper.md  simple-interview.md  synthesizer.md
taktis/core/: __init__.py  agent_templates.py  consult.py  context.py  crash_recovery.py  cron_scheduler.py  engine.py  env_vars.py  events.py  experts.py  (+16 more)
tests/: conftest.py  test_audit_fixes.py  test_chat_ui.py  test_config.py  test_consult.py  test_context.py  test_context_budget.py  test_context_errors.py  test_crash_recovery.py  test_cron_scheduler.py  test_db_errors.py  test_done_callbacks.py  test_engine.py  test_events.py  test_exceptions.py  test_execution_service.py  test_experts.py  test_graph_nodes.py  test_import_smoke.py  test_integration.py  test_interactive_result_write.py  test_phase_review.py  test_pipeline_factory.py  test_pipeline_template_sync.py  test_planner.py  test_project_service.py  test_recovery.py  test_repository.py  test_repository_errors.py  test_retry_policy.py  test_scheduler.py  test_sdk_process.py  test_sdk_process_errors.py  test_state_tracker.py  test_streaming_retry.py  test_supersession.py  test_utils_and_shutdown.py  test_wave_execution.py  test_wave_failure.py  test_web_error_handler.py  (+1 more)
(+239 files in other folders)
